# chaos-repository

./: README.md
compose/: script.sh
compose/nats/: docker-compose.yaml  nats.sh
proto/: arena.proto  chaos.proto
services/chaos-arena-scripter/: .env  .env.example  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
services/chaos-arena-scripter/scenarios/: nightmare-01.yaml  nightmare-02.yaml
services/chaos-arena-scripter/src/chaos_scripter/: config.py  logger.py  main.py
services/chaos-arena-scripter/src/chaos_scripter/adapters/discord_bot/: bot.py
services/chaos-arena-scripter/src/chaos_scripter/adapters/grpc_taskmanager/: client.py
services/chaos-arena-scripter/src/chaos_scripter/app/: dispatcher.py  scenario_runner.py
services/chaos-arena-scripter/src/chaos_scripter/domain/: models.py
services/chaos-arena-scripter/src/chaos_scripter/scripts/: gen_arena_proto.py
services/chaos-arena-scripter/src/chaos_scripter/tests/: cli_submit.py
services/chaos-k8s-agent/: .env  .env.example  README.md  go.mod  go.sum  main.go
services/chaos-k8s-agent/cmd/agent/: main.go
services/chaos-k8s-agent/deploy/k8s/: cart.yaml  deployment.yaml  rbac.yaml
services/chaos-k8s-agent/internal/app/: router.go  service.go
services/chaos-k8s-agent/internal/config/: config.go
services/chaos-k8s-agent/internal/domain/: command.go  event.go  ports.go  rollback.go
services/chaos-task-manager/: build.gradle  checkstyle.xml  settings.gradle
services/chaos-web-consoler/: package.json
services/chaos-web-consoler/src/: app.module.ts  main.ts
(+58 files in other folders)
